# src/routes/users.js
@@ -1,10 +1,0 @@
-const express = require('express');
-const conectarBancoDados = require('../middlewares/conectarBD');
-const router = express.Router();
-
-/* GET users listing. */
-router.get('/', conectarBancoDados, function(req, res, next) {
-  res.send('respond with a resource 50 var: ' + process.env.TEST);
-});
-
-module.exports = router;
